# graduation-design

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
backend/: README.md  main.py  manifest_error_output.txt  pyproject.toml  pytest_final_output.txt  pytest_output.txt  run_server.py
backend/models/: generator.py  metadata.py  result.py
backend/services/: converter.py  metrics.py
backend/tests/: __init__.py  conftest.py  test_converter.py  test_dicom_validation.py  test_geometry.py  test_image_processing.py  test_metrics.py  test_upload.py
backend/utils/: dicom_ingest.py  file_utils.py  image_processing.py  standardization.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts
frontend/src/components/: CTUpload.test.tsx  CTUpload.tsx  DashboardShell.tsx  NiivueVolumeViewer.test.tsx  NiivueVolumeViewer.tsx
frontend/src/hooks/: useNiivueViewer.ts
frontend/src/i18n/: LanguageProvider.tsx  en-US.ts  index.ts  types.ts  zh-CN.ts
frontend/src/styles/: globals.css
frontend/src/utils/: niivueSync.ts
