[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "numpy==1.26.2",
    "pillow==10.1.0",
    "pydicom==3.0.1",
    "python-multipart==0.0.6",
    "torch==2.1.0",
    "torchvision==0.16.0",
    "uvicorn==0.24.0",
]
